# Muti-LanguageAIImageClassificationSystem

./: .gitignore  AIController.h  GIT_COMMIT_GUIDE.md  InferenceEngine.c++  README.md  REORGANIZATION_SUMMARY.md  Training.py  digit_model.h5
api/: openapi.yaml
cpp/: CMakeLists.txt
cpp/include/: ImageUtils.hpp  InferenceEngine.h  InferenceEngine.hpp  PolicyEngine.hpp  RLPolicy.hpp  Softmax.hpp
cpp/src/: # Code Citations.md  ImageUtils.cpp  InferenceEngine.cpp  PolicyEngine.cpp  RLPolicy.cpp  Softmax.cpp  cmake_minimum_required(VERSION 3.cmake  main.cpp  test_softmax.cpp
java/: dependency-reduced-pom.xml  pom.xml
java/src/main/java/ai/controller/: AIController.java  InferenceService.java  NativeInference.java  RLInferenceService.java
jni/: InferenceJNI.cpp  InferenceJNI.cpp.backup
models/: cartpole_policy.onnx.data
python/: requirements.txt  transfer_learning_template.py
python/export/: export_imagenet_resnet50_to_onnx.py
python/training/: Training.py
rl/: train_cartpole.py
scripts/: build_cpp.sh  build_java.sh  run_all.sh  save_model_for_transfer_learning.py
